--- a/pubg.ipynb
+++ b/pubg.ipynb
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -33,7 +34,20 @@
         "id": "7LSUqzNEmUmE"
       },
       "source": [
-        "https://www.kaggle.com/c/pubg-finish-placement-prediction/code?competitionId=10335&sortBy=voteCount\n"
+        "### Reference\n",
+        "- [competition](https://www.kaggle.com/c/pubg-finish-placement-prediction/code?competitionId=10335&sortBy=voteCount\n",
+        ")\n",
+        "- [1st place discussion](https://www.kaggle.com/c/pubg-finish-placement-prediction/discussion/79161)\n",
+        "- [LigthGBM Baseline](https://www.kaggle.com/chocozzz/lightgbm-baseline)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A6e2UQhqtmQ3"
+      },
+      "source": [
+        "### Import Libraries"
       ]
     },
     {
@@ -46,10 +60,31 @@
         "import pandas as pd\n",
         "from sklearn import preprocessing\n",
         "import gc, sys\n",
-        "gc.enable()"
+        "gc.enable()\n",
+        "import os\n",
+        "import time\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "color = sns.color_palette()\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.model_selection import KFold\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+        "import lightgbm as lgb"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IfCHbwJPthPK"
+      },
+      "source": [
+        "### Feature Engineering"
+      ]
     },
     {
       "cell_type": "code",
@@ -77,17 +112,17 @@
         "\n",
         "    print('Adding Features')\n",
         "\n",
-        "    df['headshotrate'] = df['kills'] / df['headshotKills']\n",
-        "    df['killStreakrate'] = df['killStreaks'] / df['kills']\n",
+        "    df['headshotrate'] = df['kills']/df['headshotKills']\n",
+        "    df['killStreakrate'] = df['killStreaks']/df['kills']\n",
         "    df['healthitems'] = df['heals'] + df['boosts']\n",
-        "    df['totalDistance'] = df['rideDistance'] + df['walkDistance'] + df['swimDistance']\n",
+        "    df['totalDistance'] = df['rideDistance'] + df[\"walkDistance\"] + df[\"swimDistance\"]\n",
         "    df['killPlace_over_maxPlace'] = df['killPlace'] / df['maxPlace']\n",
-        "    df['headshotKills_over_weapons'] = df['headshotKills'] / df['kills']\n",
+        "    df['headshotKills_over_kills'] = df['headshotKills'] / df['kills']\n",
         "    df['distance_over_weapons'] = df['totalDistance'] / df['weaponsAcquired']\n",
-        "    df['walkDistance_over_kills'] = df['walkDistance'] / df['kills']\n",
         "    df['walkDistance_over_heals'] = df['walkDistance'] / df['heals']\n",
+        "    df['walkDistance_over_kills'] = df['walkDistance'] / df['kills']\n",
         "    df['killsPerWalkDistance'] = df['kills'] / df['walkDistance']\n",
-        "    df['skill'] = df['headshotKills'] + df['roadKills']\n",
+        "    df[\"skill\"] = df[\"headshotKills\"] + df[\"roadKills\"]\n",
         "\n",
         "    df[df == np.Inf] = np.NaN\n",
         "    df[df == np.NINF] = np.NaN\n",
@@ -111,6 +146,7 @@
         "    print('get group mean feature')\n",
         "    agg = df.groupby(['matchId', 'groupId'])[features].agg('mean')\n",
         "    agg_rank = agg.groupby('matchId')[features].rank(pct=True).reset_index()\n",
+        "    \n",
         "    if is_train:\n",
         "        df_out = agg.reset_index()[['matchId', 'groupId']]\n",
         "    else:\n",
@@ -123,7 +159,7 @@
         "    agg = df.groupby(['matchId', 'groupId'])[features].agg('max')\n",
         "    agg_rank = agg.groupby('matchId')[features].rank(pct=True).reset_index()\n",
         "    df_out = df_out.merge(agg.reset_index(), suffixes=[\"\", \"\"], how='left', on=['matchId', 'groupId'])\n",
-        "    df_out = df_out.merge(agg_rank, suffixes=[\"_min\", \"_min_rank\"], how='left', on=['matchId', 'groupId'])\n",
+        "    df_out = df_out.merge(agg_rank, suffixes=[\"_max\", \"_max_rank\"], how='left', on=['matchId', 'groupId'])\n",
         "\n",
         "    print('get group min feature')\n",
         "    agg = df.groupby(['matchId', 'groupId'])[features].agg('min')\n",
@@ -154,7 +190,7 @@
         "\n",
         "    return X, y, feature_names, test_idx"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -164,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-fSffymLmUmI",
-        "outputId": "ed8dec89-0799-4337-ca95-45cc1baf8b93"
+        "outputId": "4718130c-e44d-4c33-ca7f-7f0060884acf"
       },
       "source": [
         "x_train, y_train, train_columns, _ = feature_engineering(True, False)"
@@ -181,10 +217,7 @@
             "get target\n",
             "get group mean feature\n",
             "get group max feature\n",
-            "get group min feature\n",
-            "get group size feature\n",
-            "get match mean feature\n",
-            "get match size feature\n"
+            "get group min feature\n"
           ],
           "name": "stdout"
         }
@@ -193,35 +226,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T96C-8p8mUmI",
-        "outputId": "411a67d3-a4e7-4803-a2a1-c21b98a2b70c"
+        "id": "T96C-8p8mUmI"
       },
       "source": [
         "x_test, _, _, test_idx = feature_engineering(False, True)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "processing test.csv\n",
-            "remove some columns\n",
-            "Adding Features\n",
-            "Removing Na's From DF\n",
-            "get group mean feature\n",
-            "get group max feature\n",
-            "get group min feature\n",
-            "get group size feature\n",
-            "get match mean feature\n",
-            "get match size feature\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -229,10 +240,147 @@
         "id": "87c8bAsqmUmJ"
       },
       "source": [
-        ""
+        "def reduce_mem_usage(df):\n",
+        "    start_mem = df.memory_usage().sum()\n",
+        "    print(\"Memory usage of dataframe in {:.2f} MB\",format(start_mem))\n",
+        "\n",
+        "    for col in df.columns:\n",
+        "        col_type = df[col].dtype\n",
+        "\n",
+        "        if col_type != object:\n",
+        "            c_min = df[col].min()\n",
+        "            c_max = df[col].max()\n",
+        "            if str(col_type)[:3] == 'int':\n",
+        "                # np.iinfo: 정수형 타입의 데이터에 명시한 데이터 타입만큼의 메모리 할당\n",
+        "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
+        "                    df[col] = df[col].astype(np.int8)\n",
+        "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
+        "                    df[col] = df[col].astype(np.int16)\n",
+        "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
+        "                    df[col] = df[col].astype(np.int32)\n",
+        "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
+        "                    df[col] = df[col].astype(np.int64)\n",
+        "                # np.finfo\n",
+        "                elif c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
+        "                    df[col] = df[col].astype(np.float16)\n",
+        "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
+        "                    df[col] = df[col].astype(np.float32)\n",
+        "                elif c_min > np.finfo(np.float64).min and c_max < np.finfo(np.float64).max:\n",
+        "                    df[col] = df[col].astype(np.float64)\n",
+        "            else:\n",
+        "                df[col] = df[col].astype('category')\n",
+        "\n",
+        "    end_mem = df.memory_usage().sum()\n",
+        "    print('Memory Usage after optimization is: {:.2f} MB'.format(end_mem))\n",
+        "    print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "x_train = reduce_mem_usage(x_train)\n",
+        "x_test = reduce_mem_usage(x_test)\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bR_-GmD5AXyt"
+      },
+      "source": [
+        "!pip install lightgbm --install-option=--gpu\n",
+        "import lightgbm as lgb"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vFyv05J33EJj"
+      },
+      "source": [
+        "train_index = round(int(x_train.shape[0] * 0.8))\n",
+        "tr_X = x_train[:train_index]\n",
+        "val_X= x_train[train_index:]\n",
+        "tr_y = y_train[:train_index]\n",
+        "val_y = y_train[train_index:]\n",
+        "gc.collect()\n",
+        "\n",
+        "# lightgbm model custom\n",
+        "def run_lgb(train_X, train_y, val_X, val_y, x_Ztest):\n",
+        "    params = {'objective': 'regression',\n",
+        "              'device': 'gpu',\n",
+        "              'metric': 'mae',\n",
+        "              'n_estimators': 20000,\n",
+        "              'early_stopping_rounds': 200,\n",
+        "              'num_leaves': 31,\n",
+        "              'learning_rate': 0.05,\n",
+        "              'bagging_fraction': 0.7,\n",
+        "              'bagging_seed': 0,\n",
+        "              'num_threads': 4,\n",
+        "              'colsample_bytree': 0.7}\n",
+        "\n",
+        "    lgtrain = lgb.Dataset(train_X, label=train_y)\n",
+        "    lgval = lgb.Dataset(val_X, label=val_y)\n",
+        "    model = lgb.train(params, lgtrain, valid_sets=[lgtrain, lgval],\n",
+        "                      early_stopping_rounds=200, verbose_eval=1000)\n",
+        "    pred_test_y = model.predict(x_test, num_iteration=model.best_iteration)\n",
+        "    return pred_test_y, model\n",
+        "\n",
+        "# model training\n",
+        "pred_test, model = run_lgb(tr_X, tr_y, val_X, val_y, x_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bwOKmNup6Yys"
+      },
+      "source": [
+        "df_sub = pd.read_csv('/content/drive/MyDrive/input/pubg/sample_submission_V2.csv')\n",
+        "df_test = pd.read_csv('/content/drive/MyDrive/input/pubg/test_V2.csv')\n",
+        "df_sub['winPlacePerc'] = pred_test\n",
+        "# 몇 가지 열 복원\n",
+        "df_sub = df_sub.merge(df_test[['Id', 'matchId', 'groupId', 'maxPlace', 'numGroups']],\n",
+        "                      on='Id', how='left')\n",
+        "\n",
+        "#\n",
+        "df_sub_group = df_sub.groupby(['matchId', 'groupId']).first().reset_index()\n",
+        "df_sub_group['rank'] = df_sub.groupby(['matchId'])['winPlacePerc'].rank()\n",
+        "df_sub_group = df_sub_group.merge(\n",
+        "    df_sub_groupby('matchId')['rank'].max().to_frame('max_rank').reset_index(),\n",
+        "    on='matchId', how='left'\n",
+        ")\n",
+        "df_sub_group['adjusted_perc'] = (df_sub_group['rank'] - 1) / (df_sub_group['numGroups'] - 1)\n",
+        "\n",
+        "df_sub = df_sub.merge(df_sub.group[['adjusted_perc', 'matchId', 'groupId']],\n",
+        "                      on = ['matchId', 'groupId'], how='left')\n",
+        "df_sub['winPlacePerc'] = df_sub['adjusted_perc']\n",
+        "\n",
+        "subset = df_sub.loc[df_sub.maxPlace > 1]\n",
+        "gap = 1.0 / (subset.maxPlace.values - 1)\n",
+        "new_perc = np.around(subset.winPlacePerc.values / gap) * gap\n",
+        "df_sub.loc[df_sub.maxPlace > 1, 'winPlacePerc'] = new_perc\n",
+        "\n",
+        "df_sub.loc[(df_sub.maxPlace > 1) & (df_sub.numGroups == 1), 'winPlacePerc'] = 0\n",
+        "assert df_sub['winPlacePerc'].isnull().sum() == 0\n",
+        "\n",
+        "df_sub[['Id', 'winPlacePerc']].to_csv('submission_adjusted.csv', index=False)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hSIMet3ew4XZ"
+      },
+      "source": [
+        "![image](https://user-images.githubusercontent.com/68543150/119942983-62b28680-bfcd-11eb-8894-e61e85cdf9e5.png)\n"
+      ]
     }
   ]
 }
