Colaboratory를 통해 생성됨

--- a/gamestop_before_sweep_week3.ipynb
+++ b/gamestop_before_sweep_week3.ipynb
@@ -6,7 +6,7 @@
       "name": "gamestop_before_sweep_week3.ipynb",
       "provenance": [],
       "mount_file_id": "1wsZgBDHco7GsVBA5k73ymLBu8rcLW-1k",
-      "authorship_tag": "ABX9TyNdx3b3dusE0wG3tt0I5OS4",
+      "authorship_tag": "ABX9TyP1975BuHYw9QJkQMCqT5Gc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -19,7 +19,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "e86a40eca99c46199f17118295547b21": {
+        "62e0376aef644d19889bb8a2e5eeb632": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -32,15 +32,15 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_5f50edf3eaba4e9f8309ba29d9b971db",
+            "layout": "IPY_MODEL_d3aa853d1ae7473d9e6114157ff6c938",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_5c09596f19274397a0172ff98b204a76",
-              "IPY_MODEL_065b5a470b90469192ee21cdbd5a648e"
+              "IPY_MODEL_408171f191b64dfab76b4e3d32645f8d",
+              "IPY_MODEL_0ffa6dcc1b444b739e0b06ac31c28fc4"
             ]
           }
         },
-        "5f50edf3eaba4e9f8309ba29d9b971db": {
+        "d3aa853d1ae7473d9e6114157ff6c938": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -92,34 +92,34 @@
             "left": null
           }
         },
-        "5c09596f19274397a0172ff98b204a76": {
+        "408171f191b64dfab76b4e3d32645f8d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "LabelModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "LabelView",
-            "style": "IPY_MODEL_76310c1d99934f2b99397a1c28a9807c",
+            "style": "IPY_MODEL_439dd76f8fe7486eb2747f11b6775625",
             "_dom_classes": [],
             "description": "",
             "_model_name": "LabelModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 0.01MB of 0.01MB uploaded (0.00MB deduped)\r",
+            "value": " 0.15MB of 0.15MB uploaded (0.00MB deduped)\r",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_b898a12b68094a5c9e4230ca819dbd70"
+            "layout": "IPY_MODEL_668a52d13b7f449faf2ff78ae7283cd7"
           }
         },
-        "065b5a470b90469192ee21cdbd5a648e": {
+        "0ffa6dcc1b444b739e0b06ac31c28fc4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_78c62515a716468ea9d2f63b6cbc3866",
+            "style": "IPY_MODEL_431d8757820a496d9bc40b6f019c4653",
             "_dom_classes": [],
             "description": "",
             "_model_name": "FloatProgressModel",
@@ -134,10 +134,10 @@
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_45ab1e1eca184996a598eb082f11ae57"
+            "layout": "IPY_MODEL_392a7bea2d4945fdbe8e05a2c17d6b1e"
           }
         },
-        "76310c1d99934f2b99397a1c28a9807c": {
+        "439dd76f8fe7486eb2747f11b6775625": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -152,7 +152,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "b898a12b68094a5c9e4230ca819dbd70": {
+        "668a52d13b7f449faf2ff78ae7283cd7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -204,7 +204,7 @@
             "left": null
           }
         },
-        "78c62515a716468ea9d2f63b6cbc3866": {
+        "431d8757820a496d9bc40b6f019c4653": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -220,7 +220,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "45ab1e1eca184996a598eb082f11ae57": {
+        "392a7bea2d4945fdbe8e05a2c17d6b1e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -289,7 +289,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A2sgioyfrIRY"
+        "id": "A2sgioyfrIRY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a215b9d-4694-477a-a554-a8f5b74d36bc"
       },
       "source": [
         "!pip install wandb -qqq\n",
@@ -305,8 +309,22 @@
         "from keras.layers import LSTM, Dense, Dropout\n",
         "from sklearn.model_selection import train_test_split\n"
       ],
-      "execution_count": 56,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 1.6 MB 7.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 133 kB 40.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 97 kB 8.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 170 kB 68.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 63 kB 2.5 MB/s \n",
+            "\u001b[?25h  Building wheel for subprocess32 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for pathtools (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -316,7 +334,7 @@
           "height": 222
         },
         "id": "X_rz-ft0v0DZ",
-        "outputId": "695fe3ad-a58d-4b7b-9b18-41e44c6ce28c"
+        "outputId": "9aaa479a-90d4-4d35-838c-b4e1e7272df8"
       },
       "source": [
         "PATH = '/content/drive/MyDrive/input/'\n",
@@ -324,7 +342,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 57,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +423,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 2
         }
       ]
     },
@@ -414,24 +432,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 823,
+          "height": 309,
           "referenced_widgets": [
-            "e86a40eca99c46199f17118295547b21",
-            "5f50edf3eaba4e9f8309ba29d9b971db",
-            "5c09596f19274397a0172ff98b204a76",
-            "065b5a470b90469192ee21cdbd5a648e",
-            "76310c1d99934f2b99397a1c28a9807c",
-            "b898a12b68094a5c9e4230ca819dbd70",
-            "78c62515a716468ea9d2f63b6cbc3866",
-            "45ab1e1eca184996a598eb082f11ae57"
+            "62e0376aef644d19889bb8a2e5eeb632",
+            "d3aa853d1ae7473d9e6114157ff6c938",
+            "408171f191b64dfab76b4e3d32645f8d",
+            "0ffa6dcc1b444b739e0b06ac31c28fc4",
+            "439dd76f8fe7486eb2747f11b6775625",
+            "668a52d13b7f449faf2ff78ae7283cd7",
+            "431d8757820a496d9bc40b6f019c4653",
+            "392a7bea2d4945fdbe8e05a2c17d6b1e"
           ]
         },
         "id": "7E0KIJZrybHK",
-        "outputId": "3ad7dd7b-adfd-47f6-dd17-bb109d16a26e"
+        "outputId": "013dc47f-df7d-4fa0-e748-0678b218bada"
       },
       "source": [
         "default_config = {\n",
-        "    'learning_rate': 0.001,\n",
+        "    'learning_rate': 0.01,\n",
         "    'dropout_rate': 0.2,\n",
         "    'hidden1': 50,\n",
         "    'hidden2': 50,\n",
@@ -441,13 +459,13 @@
         "wandb.init(project='gamestop_prediction', config=default_config)\n",
         "config = wandb.config"
       ],
-      "execution_count": 58,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "Finishing last run (ID:1jepydoc) before initializing another..."
+              "Finishing last run (ID:hazlhsbe) before initializing another..."
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -459,7 +477,7 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<br/>Waiting for W&B process to finish, PID 1407<br/>Program ended successfully."
+              "<br/>Waiting for W&B process to finish, PID 291<br/>Program ended successfully."
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -471,12 +489,12 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e86a40eca99c46199f17118295547b21",
+              "model_id": "62e0376aef644d19889bb8a2e5eeb632",
               "version_minor": 0,
               "version_major": 2
             },
             "text/plain": [
-              "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+              "VBox(children=(Label(value=' 0.13MB of 0.13MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
             ]
           },
           "metadata": {}
@@ -485,7 +503,7 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "Find user logs for this run at: <code>/content/wandb/run-20210819_060727-1jepydoc/logs/debug.log</code>"
+              "Find user logs for this run at: <code>/content/wandb/run-20210820_123508-hazlhsbe/logs/debug.log</code>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -497,7 +515,7 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "Find internal logs for this run at: <code>/content/wandb/run-20210819_060727-1jepydoc/logs/debug-internal.log</code>"
+              "Find internal logs for this run at: <code>/content/wandb/run-20210820_123508-hazlhsbe/logs/debug-internal.log</code>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -509,37 +527,7 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<h3>Run summary:</h3><br/><style>\n",
-              "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
-              "    </style><table class=\"wandb\">\n",
-              "<tr><td>epoch</td><td>14</td></tr><tr><td>loss</td><td>0.0042</td></tr><tr><td>mse</td><td>0.0042</td></tr><tr><td>val_loss</td><td>0.34595</td></tr><tr><td>val_mse</td><td>0.34595</td></tr><tr><td>_runtime</td><td>1099</td></tr><tr><td>_timestamp</td><td>1629354353</td></tr><tr><td>_step</td><td>14</td></tr><tr><td>best_val_loss</td><td>0.34595</td></tr><tr><td>best_epoch</td><td>14</td></tr></table>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<h3>Run history:</h3><br/><style>\n",
-              "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
-              "    </style><table class=\"wandb\">\n",
-              "<tr><td>epoch</td><td>▁▁▂▃▃▃▄▅▅▅▆▇▇▇█</td></tr><tr><td>loss</td><td>█▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>mse</td><td>█▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>val_loss</td><td>█▄▃▃▃▂▂▂▂▁▁▂▁▁▁</td></tr><tr><td>val_mse</td><td>█▄▃▃▃▂▂▂▂▁▁▂▁▁▁</td></tr><tr><td>_runtime</td><td>▁▁▂▂▃▃▄▅▅▆▆▇▇██</td></tr><tr><td>_timestamp</td><td>▁▁▂▂▃▃▄▅▅▆▆▇▇██</td></tr><tr><td>_step</td><td>▁▁▂▃▃▃▄▅▅▅▆▇▇▇█</td></tr></table><br/>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "Synced 5 W&B file(s), 1 media file(s), 0 artifact file(s) and 0 other file(s)"
+              "Synced 5 W&B file(s), 0 media file(s), 8 artifact file(s) and 1 other file(s)"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -552,7 +540,7 @@
           "data": {
             "text/html": [
               "\n",
-              "                    <br/>Synced <strong style=\"color:#cdcd00\">wandering-lake-2</strong>: <a href=\"https://wandb.ai/kade/gamestop_prediction/runs/1jepydoc\" target=\"_blank\">https://wandb.ai/kade/gamestop_prediction/runs/1jepydoc</a><br/>\n",
+              "                    <br/>Synced <strong style=\"color:#cdcd00\">colorful-sponge-1063</strong>: <a href=\"https://wandb.ai/kade/gamestop_prediction/runs/hazlhsbe\" target=\"_blank\">https://wandb.ai/kade/gamestop_prediction/runs/hazlhsbe</a><br/>\n",
               "                "
             ],
             "text/plain": [
@@ -565,7 +553,7 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "...Successfully finished last run (ID:1jepydoc). Initializing new run:<br/><br/>"
+              "...Successfully finished last run (ID:hazlhsbe). Initializing new run:<br/><br/>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -579,10 +567,10 @@
             "text/html": [
               "\n",
               "                Tracking run with wandb version 0.12.0<br/>\n",
-              "                Syncing run <strong style=\"color:#cdcd00\">fluent-voice-3</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+              "                Syncing run <strong style=\"color:#cdcd00\">daily-wood-1064</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
               "                Project page: <a href=\"https://wandb.ai/kade/gamestop_prediction\" target=\"_blank\">https://wandb.ai/kade/gamestop_prediction</a><br/>\n",
-              "                Run page: <a href=\"https://wandb.ai/kade/gamestop_prediction/runs/19yjsfdb\" target=\"_blank\">https://wandb.ai/kade/gamestop_prediction/runs/19yjsfdb</a><br/>\n",
-              "                Run data is saved locally in <code>/content/wandb/run-20210819_062747-19yjsfdb</code><br/><br/>\n",
+              "                Run page: <a href=\"https://wandb.ai/kade/gamestop_prediction/runs/2ynjurt5\" target=\"_blank\">https://wandb.ai/kade/gamestop_prediction/runs/2ynjurt5</a><br/>\n",
+              "                Run data is saved locally in <code>/content/wandb/run-20210820_124226-2ynjurt5</code><br/><br/>\n",
               "            "
             ],
             "text/plain": [
@@ -600,7 +588,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5kxT8l4BDW8d",
-        "outputId": "cc4f03fc-1614-430d-ece7-235f4dc844da"
+        "outputId": "0169897a-286b-40dc-f26c-8b4c692ab163"
       },
       "source": [
         "X = df.drop('date', axis=1).values\n",
@@ -609,7 +597,7 @@
         "print(X_tr.shape, y_tr.shape)\n",
         "print(X_te.shape, y_te.shape)"
       ],
-      "execution_count": 59,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,25 +612,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JkBFlWtJB0q-"
+        "id": "JkBFlWtJB0q-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3009a251-f522-4653-e201-efa0b7d90ef5"
       },
       "source": [
-        "time_step = config.time_step\n",
+        "time_step = config.time_step # 60\n",
         "X_train, y_train, X_test, y_test = [], [], [], []\n",
-        "for i in range(time_step,len(X_tr)): # train\n",
+        "for i in range(time_step,len(X_tr)): # train i=60 -> i = 61\n",
         "    X_train.append(X_tr[i-time_step:i,:])\n",
         "    y_train.append(y_tr[i])\n",
         "for i in range(time_step, len(X_te)): # test\n",
         "    X_test.append(X_te[i-time_step:i,:])\n",
         "    y_test.append(y_te[i])\n",
+        "\n",
         "X_train, y_train = np.array(X_train), np.array(y_train)\n",
         "X_test, y_test = np.array(X_test), np.array(y_test)\n",
         "# LSTM input shape 조건(batch_size, timestep, feature_num)에 맞게 reshape\n",
-        "X_train = np.reshape(X_train, (-1,X_train.shape[1],2))\n",
-        "X_test = np.reshape(X_test, (-1,X_test.shape[1],2))"
+        "\n",
+        "print(X_train.shape, y_train.shape)\n",
+        "print(X_test.shape, y_test.shape)\n",
+        "\n",
+        "X_train = np.reshape(X_train, (-1,time_step,2))\n",
+        "X_test = np.reshape(X_test, (-1,X_test.shape[1],2))\n",
+        "\n"
       ],
-      "execution_count": 60,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(2562, 60, 2) (2562,)\n",
+            "(232, 60, 2) (232,)\n",
+            "(2562, 60, 2) (2562,)\n",
+            "(232, 60, 2) (232,)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -656,8 +665,10 @@
       "source": [
         "model = tf.keras.Sequential([\n",
         "    LSTM(config.hidden1, return_sequences=True, input_shape=(config.time_step, 2)),\n",
-        "    LSTM(config.hidden1, return_sequences=True),\n",
-        "    LSTM(config.hidden1),\n",
+        "    \n",
+        "    LSTM(config.hidden2, return_sequences=True),\n",
+        "\n",
+        "    LSTM(config.hidden3),\n",
         "    Dropout(config.dropout_rate),\n",
         "    Dense(1),\n",
         "])\n",
@@ -670,7 +681,7 @@
         "          validation_data=(X_test, y_test),\n",
         "          epochs=200, callbacks=[WandbCallback(), early_stopping])"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
